# sdu_controllers

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  formatCode.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml
app/: CMakeLists.txt  sdu_controllers_app.cpp
cmake/: LoadNanoBind.cmake  sdu_controllersConfig.cmake
config/models/: breeding_blanket_handling_robot.yaml  ur10e_robot.yaml  ur3e_robot.yaml  ur5e_robot.yaml
data/: eurofusion_robot_trajectory.csv  eurofusion_robot_trajectory_new.csv  joint_trajectory_safe.csv  joint_trajectory_safe_new.csv  trajectory_safe_simulink.csv
doc/: CMakeLists.txt  conf.py  index.rst  refs.bib  requirements-rtd.txt  requirements.txt
doc/_static/: custom.css
doc/pages/api/: api.rst
doc/pages/examples/: examples.rst
doc/pages/explanation/: forward_kinematics.rst  index.rst
doc/pages/getting_started/: getting_started.rst
doc/pages/how_to_guides/: index.rst  installation.rst
doc/pages/installation/: installation.rst
doc/pages/reference/: api.rst  index.rst
doc/pages/tutorial/: admittance_controller.rst  cartesian_motion_control.rst  getting_started.rst  index.rst  joint_space_motion_control.rst
examples/: CMakeLists.txt  UR5e_inv_dyn_comparison.cpp  admittance_controller.cpp  admittance_controller_example.cpp  cartesian_motion_controller.cpp  force_control_velocity.cpp  force_control_velocity_example.cpp  joint_motion_controller.cpp  joint_motion_controller_example.cpp  rnea_test.cpp  sdu_controllers_example.cpp
examples/data/: cartesian_trajectory_safe.csv  franka_cartesian_trajectory_circle.csv  joint_trajectory_unsafe.csv  trajectory.csv  trajectory_safe.csv
examples/eurofusion_examples/: eurofusion_joint_motion_controller.cpp  eurofusion_robot_rnea.cpp  force_control_velocity.cpp
examples/eurofusion_examples/python/: eurofusion_robot_rnea.py  eurofusion_set_tcp_mass.py
examples/hardware/franka/: CMakeLists.txt
examples/hardware/franka/cpp/: cartesian_control.cpp  move_to_joint_position.cpp
examples/hardware/ur/: CMakeLists.txt
examples/hardware/ur/cpp/: admittance_controller_kinesthetic_teaching.cpp  admittance_controller_trajectory.cpp  joint_motion_controller.cpp
examples/hardware/ur/python/: admittance_controller_kinesthetic_teaching.cpp  admittance_kinesthetic_teaching.py  admittance_trajectory_example.py
examples/python/: joint_motion_controller.py
examples/simulation/: CMakeLists.txt
examples/simulation/eurofusion/cpp/: eurofusion_force_control_velocity.cpp  eurofusion_joint_motion_controller.cpp  eurofusion_robot_rnea.cpp  force_control_velocity.cpp
examples/simulation/eurofusion/python/: eurofusion_set_tcp_mass.py
examples/simulation/general/cpp/: admittance_controller.cpp
examples/simulation/ur/cpp/: cartesian_motion_controller.cpp  force_control_velocity.cpp  joint_motion_controller.cpp
examples/simulation/ur/python/: admittance_controller.py  joint_motion_controller.py
examples/ur_examples/: CMakeLists.txt  admittance_controller_trajectory_example.cpp  admittance_kinesthetic_teaching_example.cpp  cartesian_motion_controller.cpp  joint_motion_controller.cpp
examples/ur_examples/python/: admittance_controller.py  operational_space_controller.py
hardware_examples/: CMakeLists.txt
hardware_examples/franka/: CMakeLists.txt  cartesian_control.cpp  move_to_joint_position.cpp
hardware_examples/ur/: admittance_controller_kinesthetic_teaching.cpp  admittance_controller_trajectory.cpp
hardware_examples/ur/python/: requirements.txt
include/sdu_controllers/: sdu_controllers.hpp
include/sdu_controllers/controllers/: admittance_controller_cartesian.hpp  admittance_controller_position.hpp  controller.hpp  (+4 more)
python/: CMakeLists.txt  copy_module.py  generate_stubs.py  install_copy_module.cmake
python/sdu_controllers/: __init__.py  _kinematics.cpp  _math.cpp  _robot_models.cpp  _sdu_controllers.cpp
scripts/: generate_cartesian_trajectory.py  generate_cartesian_trajectory_franka.py  generate_cartesian_trajectory_ur.py  generate_joint_trajectory.py  generate_joint_trajectory_bb.py  generate_trajectory.py  plot_cartesian_trajectory.py  plot_joint_trajectory.py  plot_joint_trajectory_bb.py  plot_joint_trajectory_new.py  plot_trajectory.py
scripts/admittance_controller/: plot_trajectory.py
simulink/: pid_controller.m  pid_controller_script_test.m  pid_controller_test.py  pid_controller_test.slx
simulink/blocks/: library_test.slx  pid_controller.m  sdu_controllers.slx  slblocks.m  ur_robot_model.m
simulink/tests/: admittance_controller_test.slx  dyn_compononents_test.slx  eurofusion_force_control.slx  forward_dynamics_test.slx  init.m  invdyn_control_test.slx  joint_trajectory_safe.csv  nanobind.py  operational_space_control_test.slx  pid_controller_test.slx  set_path.m
src/: CMakeLists.txt  sdu_controllers.cpp
src/controllers/: admittance_controller_cartesian.cpp  admittance_controller_position.cpp  force_control_inner_velocity_loop.cpp  operational_space_controller.cpp  pd_controller.cpp  pid_controller.cpp
src/hal/: franka_robot.cpp  ur_robot.cpp
src/kinematics/: dh_kinematics.cpp  forward_kinematics.cpp
src/math/: forward_dynamics.cpp  inverse_dynamics_joint_space.cpp  math.cpp  momentum_observer.cpp  rnea.cpp
src/models/: breeding_blanket_handling_robot.cpp  breeding_blanket_handling_robot_model.cpp  parameter_robot_model.cpp  regressor_robot_model.cpp  ur_robot.cpp  ur_robot_model.cpp
src/safety/: safety_verifier.cpp
src/safety/control_barrier_function/cpp_example/test_cbf/: CMakeLists.txt  package.xml
src/safety/control_barrier_function/cpp_example/test_cbf/include/test_cbf/: control_barrier_functions.h  test_cbf.h
src/safety/control_barrier_function/cpp_example/test_cbf/src/: control_barrier_functions.cpp  test_cbf.cpp
src/utils/: utility.cpp
tests/: CMakeLists.txt  pose_test.cpp  rnea_test.cpp  sdu_controllers_t.cpp  tests.cpp  ur5e_inv_dyn_comparison.cpp
tests/python/: test_python_bindings.py
(+25 files in other folders)
